--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
         </div>
 
         <div class="row">
-            <button class="col s6 waves-effect waves-light btn" onclick="previousCard()">Previous Card</button>
-            <button class="col s6 waves-effect waves-light btn" onclick="nextCard()">Next Card</button>
+            <button class="col s6 waves-effect waves-light btn" onclick="previousCard()"><< Previous</button>
+            <button class="col s6 waves-effect waves-light btn" onclick="nextCard()">Next Card >></button>
         </div>
 
         <ul id="card-selector" onclick="selectCard(event)">
