--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
         <div class="row">
             <button class="col s6 waves-effect waves-light btn" onclick="previousCard()"><< Previous</button>
-            <button class="col s6 waves-effect waves-light btn" onclick="nextCard()">Next Card >></button>
+            <button class="col s6 waves-effect waves-light btn" onclick="nextCard()">Next >></button>
         </div>
 
         <ul id="card-selector" onclick="selectCard(event)">
