--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             height: auto; /* Maintain aspect ratio */
         }
     </style>
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 </head>
 <body>
     <div id="flashcard-container">
