--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             height: auto; /* Maintain aspect ratio */
         }
     </style>
-    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/goldenluke/javascript-flashcards/main/favicon.png" />
 </head>
 <body>
     <div id="flashcard-container">
