--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Flashcards</title>
+    <title>1. Contração do Músculo Esquelético</title>
     <!-- Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
     <style>
         body {
             font-family: Roboto, sans-serif;
@@ -121,6 +120,7 @@
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/goldenluke/javascript-flashcards/main/favicon.png" />
 </head>
 <body>
+    <h5>1. Contração do Músculo Esquelético</h5>
     <div id="flashcard-container">
         <div id="flashcard" onclick="flipCard()">
             <div id="card-front">
@@ -152,38 +152,42 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
 const flashcardsMarkdown = [
-    "Fontanela/Fontículo (Anterior e Posterior)::![[Screenshot_20240502_173739.png]]",
-    "Crânio Neural::Maior, superior e posterior -> abriga o encéfalo",
-    "Crânio Visceral (Face/Rosto)::Menor, inferior e anterior -> abriga órgãos do sistema respiratório e digestório",
-    "Sutura Metópica::Variação anatômica -> Sutura Frontal se mantém separada no indivíduo adulto (não se apresenta no crânio desenvolvido) ![[Screenshot_20240502_173739.png]]",
-    "Fossa Anterior::Situada acima dos olhos, na porção anterior do crânio",
-    "Forame Magno::Localizado na porção inferior do crânio, permite a passagem da medula espinhal",
-    "Processo Zigomático::Osso saliente da face, conhecido como osso da bochecha",
-    "Fossa Temporal::Localizada na lateral do crânio, abaixo da região das têmporas",
-    "Processo Mastoide::Projeção óssea atrás da orelha, relacionada ao osso temporal",
-    "Forame Jugular::Localizado na base do crânio, permite a passagem de estruturas nervosas e vasculares",
-    "Forame Oval::Pequena abertura na base do crânio, permite a passagem de nervos",
-    "Forame Redondo::Abertura localizada na porção lateral do crânio, próximo ao forame oval",
-    "Canal Óptico::Passagem no crânio para o nervo óptico",
-    "Processo Estiloide::Projeção fina e alongada localizada na base do crânio",
-    "Fenda Orbital Superior::Abertura no crânio para os nervos cranianos e vasos sanguíneos",
-    "Fossa Craniana Média::Parte do crânio que abriga o lobo temporal do cérebro",
-    "Linha Nucal Superior::Linha óssea no crânio onde se prendem músculos do pescoço",
-    "Linha Nucal Inferior::Outra linha óssea no crânio onde se prendem músculos do pescoço",
-    "Forame Cego::Pequeno orifício na base do crânio, remanescente do desenvolvimento fetal",
-    "Processo Coronoide::Projeção óssea na mandíbula, relacionada aos músculos da mastigação",
-    "Processo Condilar::Proeminência da mandíbula que se articula com o osso temporal",
-    "Sutura Sagital::Junção entre os ossos parietais do crânio",
-    "Sutura Lambdoide::Junção entre os ossos parietais e occipital do crânio",
-    "Processo Vomer::Osso delgado e triangular no septo nasal",
-    "Forame Lacerado::Localizado no crânio próximo ao forame jugular",
-    "Forame Rasgado Posterior::Abertura na base do crânio para nervos e vasos sanguíneos",
-    "Fenda Orbital Inferior::Abertura na parte inferior do crânio para nervos e vasos sanguíneos",
-    "Canal Carótico::Passagem no crânio para a artéria carótida interna",
-    "Canal Auditivo Interno::Canal no osso temporal para o nervo facial e auditivo"
-    // Add more flashcards in the same format
+    "O sistema nervoso periférico é dividido em quais sistemas?::Sistema nervoso somático (voluntário) e sistema nervoso autônomo (involuntário)",
+    "O sistema nervoso autônomo é dividido em quais partes?::Simpático e parassimpático",
+    "Qual a função do S.N.A. Simpático?::Origina ações ligadas a situações de perigo, prepara o organismo para reagir a situações de medo, stress e excitação",
+    "Qual a função do S.N.A. Parassimpático?::Atua em oposição ao S.N.A. Simpático, inervando praticamente todos os órgãos internos",
+    "O que são as fibras musculares esqueléticas?::Componentes que formam o músculo esquelético",
+    "O que é o sarcolema?::Membrana delgada que reveste a fibra muscular esquelética",
+    "O que são miofibrilas?::Componentes das fibras musculares, compostas por actina e miosina",
+    "Qual a função dos filamentos de actina e miosina?::Responsáveis pelas contrações musculares",
+    "O que é o sarcômero?::Segmento entre dois discos Z sucessivos",
+    "O que é a titina?::Molécula que mantém os filamentos de miosina em seus lugares, atuando como uma mola",
+    "Qual a função da nebulina?::Estruturar a proteína em uma determinada posição",
+    "O que é o sarcoplasma?::Líquido intracelular entre as miofibrilas, contendo potássio, magnésio e fosfato",
+    "O que é o retículo sarcoplasmático?::Retículo endoplasmático especializado do músculo esquelético",
+    "Qual o primeiro passo no mecanismo da contração muscular?::Potenciais de ação cursam pelo nervo motor até suas terminações nas fibras musculares",
+    "Qual o papel da acetilcolina na contração muscular?::Abre múltiplos canais de cátion na membrana da fibra muscular",
+    "O que acontece quando os canais de sódio se abrem na fibra muscular?::Difusão de íons sódio causa despolarização local e desencadeia o potencial de ação",
+    "Como o potencial de ação se propaga na fibra muscular?::Propaga-se pela membrana da fibra muscular como nas fibras nervosas",
+    "O que ocorre quando a membrana muscular é despolarizada?::O retículo sarcoplasmático libera grande quantidade de íons cálcio",
+    "Qual é o papel dos íons cálcio na contração muscular?::Ativam as forças atrativas entre os filamentos de miosina e actina",
+    "O que acontece após a contração muscular?::Íons cálcio são bombardeados de volta para o retículo sarcoplasmático pela bomba de Ca++",
+    "Como o complexo troponina-tropomiosina regula a contração muscular?::Inibe os sítios ativos no filamento de actina",
+    "Como os íons cálcio desinibem o complexo troponina-tropomiosina?::Combinam-se com a troponina C, puxando as moléculas de tropomiosina e desprotegendo os sítios ativos da actina",
+    "Quais são as fontes de energia para a contração muscular?::ATP, fosfocreatina, glicólise e metabolismo oxidativo",
+    "Como o ATP é reconstituído na fibra muscular?::ADP é refosforilado para formar um novo ATP",
+    "Qual a função da fosfocreatina?::Reconstituir o ATP, transportando uma ligação fosfato de alta energia",
+    "Como a glicólise contribui para a contração muscular?::Quebra do glicogênio em ácido pirúvico e lático para reconstituir o ATP e a fosfocreatina",
+    "O que é o metabolismo oxidativo?::Combinação do oxigênio com produtos finais da glicólise para liberar ATP",
+    "O que é uma contração isométrica?::O músculo não encurta durante a contração, mas aumenta a tensão",
+    "O que é uma contração isotônica?::Os músculos se encurtam e a tensão no músculo permanece constante",
+    "Quais são as características das fibras musculares lentas?::Menores, alta capilaridade, muitas mitocôndrias, muita mioglobina, contração prolongada",
+    "Quais são as características das fibras musculares rápidas?::Maiores, retículo sarcoplasmático extenso, muitas enzimas glicolíticas, contração rápida e curta",
+    "O que é o potencial de ação?::Capacidade dos nervos de conduzir sinais elétricos rapidamente",
+    "O que é o período refratário?::Intervalo de tempo durante o qual não pode ser produzida uma segunda contração",
+    "O que é o período refratário relativo?::A célula pode responder a um estímulo forte suficiente durante a repolarização parcial",
+    "O que é o período refratário absoluto?::A célula está totalmente despolarizada e não pode responder a estímulos"
 ];
-
         function convertMarkdownToHTML(markdownText) {
             const regex = /!\[\[(.*?)\]\]/g;
             return markdownText.replace(regex, (match, src) => {
@@ -327,3 +331,4 @@ const flashcardsMarkdown = [
     </script>
 </body>
 </html>
+
