--- a/index.html
+++ b/index.html
@@ -3,332 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1. Contração do Músculo Esquelético</title>
+    <title>JavaScript Flashcards</title>
     <!-- Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <style>
-        body {
-            font-family: Roboto, sans-serif;
-            height: 100%;
-            margin: 0;
+        /* Custom CSS for logo and title */
+        .brand-logo {
+            margin-left: 10px; /* Adjust as needed */
+        }
+
+        .brand-logo.center {
+            margin-left: 10px; /* Adjust as needed */
+        }
+
+        .title-wrapper {
             display: flex;
-            flex-direction: column;
-            justify-content: center;
             align-items: center;
-        }
-
-        #flashcard-container {
-            text-align: center;
-            max-width: 90vw; /* Set maximum width to 90% of viewport width */
-        }
-
-        #flashcard {
-            width: 100%;
-            height: 400px; /* Reduced height for better mobile experience */
-            perspective: 1000px;
-            position: relative;
-            margin-bottom: 20px; /* Add some space between flashcard and buttons */
-        }
-
-        #card-front,
-        #card-back {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            display: flex;
-            flex-direction: column;
             justify-content: center;
-            align-items: center;
-            backface-visibility: hidden;
+            height: 100%; /* Ensure title-wrapper takes full height */
         }
 
-        #card-front {
-            background-color: #3498db;
-            color: #fff;
+        .title-wrapper img {
+            margin-right: 10px; /* Adjust as needed */
         }
 
-        #card-back {
-            background-color: #e74c3c;
-            color: #fff;
-            display: none; /* Initially hidden */
+        .title-text {
+            font-size: 1.64rem;
+            font-weight: 400;
+            line-height: 110%;
         }
 
-        button {
-            margin-top: 10px; /* Reduced margin for better mobile experience */
-            cursor: pointer;
-        }
+        @media only screen and (max-width: 600px) {
+            /* Custom CSS for small screens (e.g., mobile devices) */
+            .brand-logo,
+            .brand-logo.center {
+                margin-left: 0; /* Reset margin for small screens */
+                display: flex;
+                align-items: center;
+            }
 
-        .easy {
-            background-color: green;
-            color: #fff;
-        }
+            .title-wrapper {
+                height: auto; /* Reset height for small screens */
+            }
 
-        .medium {
-            background-color: #FF6F00;
-            color: #fff;
-        }
-
-        .hard {
-            background-color: red;
-            color: #fff;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        li {
-            cursor: pointer;
-            padding: 5px;
-            margin: 5px;
-            background-color: #303F9F;
-            border-radius: 5px;
-            transition: color 0.3s ease; /* Add transition effect */
-        }
-
-        li:hover {
-            background-color: #5C6BC0;
-        }
-
-        /* Styles for selected card */
-        .selected {
-            font-weight: bold;
-        }
-
-        /* Set font color of <li> elements to white */
-        #card-selector li {
-            color: white;
-        }
-
-        /* Add lighter class for distant <li> elements */
-        .lighter {
-            color: #ccc; /* Lighter color */
-        }
-
-        /* Style for selected card if it's the current card */
-        .selected-current-card {
-            background-color: #7B1FA2; /* Change to desired color */
-        }
-
-        /* Responsive image styles */
-        #answer img {
-            max-width: 100%; /* Ensure image does not exceed container width */
-            height: auto; /* Maintain aspect ratio */
+            .title-wrapper img {
+                margin-right: 5px; /* Adjust as needed */
+            }
         }
     </style>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/goldenluke/javascript-flashcards/main/favicon.png" />
 </head>
 <body>
-    <h5>1. Contração do Músculo Esquelético</h5>
-    <div id="flashcard-container">
-        <div id="flashcard" onclick="flipCard()">
-            <div id="card-front">
-                <p id="question">Press to reveal the question</p>
-            </div>
-            <div id="card-back">
-                <p id="answer"><img src=""></p>
-                <div id="flashcard-content"></div> <!-- Content div -->
+    <nav class="blue">
+        <div class="nav-wrapper">
+            <div class="title-wrapper">
+                <img width="40" height="40" src="favicon.png">
+                <span class="title-text">JavaScript Flashcards - Fisiologia</span>
             </div>
         </div>
-
-        <div class="row">
-            <button class="col s4 easy waves-effect waves-light btn" onclick="setDifficulty('easy')">Easy</button>
-            <button class="col s4 medium waves-effect waves-light btn" onclick="setDifficulty('medium')">Medium</button>
-            <button class="col s4 hard waves-effect waves-light btn" onclick="setDifficulty('hard')">Hard</button>
-        </div>
-
-        <div class="row">
-            <button class="col s6 waves-effect waves-light btn" onclick="previousCard()"><< Previous</button>
-            <button class="col s6 waves-effect waves-light btn" onclick="nextCard()">Next >></button>
-        </div>
-
-        <ul id="card-selector" onclick="selectCard(event)">
-            <!-- Dynamically populate options using JavaScript -->
+    </nav>
+    <div class="container">
+        <ul class="collection with-header">
+            <li class="collection-item"><a href="1.html" class="waves-effect waves-light btn">Contração do Músculo Esquelético</a></li>
+            <li class="collection-item"><a href="2.html" class="waves-effect waves-light btn">Transmissão Neuromuscular</a></li>
+            <li class="collection-item"><a href="3.html" class="waves-effect waves-light btn">Músculo Liso</a></li>
+            <li class="collection-item"><a href="5.html" class="waves-effect waves-light btn">Circulação</a></li>
+            <li class="collection-item"><a href="6.html" class="waves-effect waves-light btn">Distensibilidade Vascular e Pressões</a></li>
+            <li class="collection-item"><a href="7.html" class="waves-effect waves-light btn">Excitação do Músculo Esquelético</a></li>
+            <li class="collection-item"><a href="8.html" class="waves-effect waves-light btn">Microcirculação e Sistema Linfático</a></li>
+            <li class="collection-item"><a href="9.html" class="waves-effect waves-light btn">Controle Local e Humoral do Fluxo Sanguíneo dos Tecidos</a></li>
+            <li class="collection-item"><a href="10.html" class="waves-effect waves-light btn">Regulação Nervosa da Circulação</a></li>
+            <li class="collection-item"><a href="11.html" class="waves-effect waves-light btn">Rins e o Controle a Longo Prazo da Pressão Arterial</a></li>
+            <li class="collection-item"><a href="12.html" class="waves-effect waves-light btn">Débito Cardíaco e Retorno Venoso</a></li>
+            <li class="collection-item"><a href="13.html" class="waves-effect waves-light btn">Choques Circulatórios</a></li>
+            <li class="collection-item"><a href="15.html" class="waves-effect waves-light btn">Distensibilidade Vascular</a></li>
+            <li class="collection-item"><a href="17.html" class="waves-effect waves-light btn">Controle local e humoral do fluxo sanguíneo</a></li>
+            <li class="collection-item"><a href="18.html" class="waves-effect waves-light btn">Regulação nervosa da circulação e controle rápido da PA</a></li>
+            <li class="collection-item"><a href="19.html" class="waves-effect waves-light btn">Influência da renina no controle da PA</a></li>
+            <li class="collection-item"><a href="20.html" class="waves-effect waves-light btn">Débito cardíaco, Retorno venoso e suas regulações</a></li>
+            <li class="collection-item"><a href="24.html" class="waves-effect waves-light btn">Choque circulatório e seu tratamento</a></li>
         </ul>
     </div>
-
     <!-- Materialize JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script>
-const flashcardsMarkdown = [
-    "O sistema nervoso periférico é dividido em quais sistemas?::Sistema nervoso somático (voluntário) e sistema nervoso autônomo (involuntário)",
-    "O sistema nervoso autônomo é dividido em quais partes?::Simpático e parassimpático",
-    "Qual a função do S.N.A. Simpático?::Origina ações ligadas a situações de perigo, prepara o organismo para reagir a situações de medo, stress e excitação",
-    "Qual a função do S.N.A. Parassimpático?::Atua em oposição ao S.N.A. Simpático, inervando praticamente todos os órgãos internos",
-    "O que são as fibras musculares esqueléticas?::Componentes que formam o músculo esquelético",
-    "O que é o sarcolema?::Membrana delgada que reveste a fibra muscular esquelética",
-    "O que são miofibrilas?::Componentes das fibras musculares, compostas por actina e miosina",
-    "Qual a função dos filamentos de actina e miosina?::Responsáveis pelas contrações musculares",
-    "O que é o sarcômero?::Segmento entre dois discos Z sucessivos",
-    "O que é a titina?::Molécula que mantém os filamentos de miosina em seus lugares, atuando como uma mola",
-    "Qual a função da nebulina?::Estruturar a proteína em uma determinada posição",
-    "O que é o sarcoplasma?::Líquido intracelular entre as miofibrilas, contendo potássio, magnésio e fosfato",
-    "O que é o retículo sarcoplasmático?::Retículo endoplasmático especializado do músculo esquelético",
-    "Qual o primeiro passo no mecanismo da contração muscular?::Potenciais de ação cursam pelo nervo motor até suas terminações nas fibras musculares",
-    "Qual o papel da acetilcolina na contração muscular?::Abre múltiplos canais de cátion na membrana da fibra muscular",
-    "O que acontece quando os canais de sódio se abrem na fibra muscular?::Difusão de íons sódio causa despolarização local e desencadeia o potencial de ação",
-    "Como o potencial de ação se propaga na fibra muscular?::Propaga-se pela membrana da fibra muscular como nas fibras nervosas",
-    "O que ocorre quando a membrana muscular é despolarizada?::O retículo sarcoplasmático libera grande quantidade de íons cálcio",
-    "Qual é o papel dos íons cálcio na contração muscular?::Ativam as forças atrativas entre os filamentos de miosina e actina",
-    "O que acontece após a contração muscular?::Íons cálcio são bombardeados de volta para o retículo sarcoplasmático pela bomba de Ca++",
-    "Como o complexo troponina-tropomiosina regula a contração muscular?::Inibe os sítios ativos no filamento de actina",
-    "Como os íons cálcio desinibem o complexo troponina-tropomiosina?::Combinam-se com a troponina C, puxando as moléculas de tropomiosina e desprotegendo os sítios ativos da actina",
-    "Quais são as fontes de energia para a contração muscular?::ATP, fosfocreatina, glicólise e metabolismo oxidativo",
-    "Como o ATP é reconstituído na fibra muscular?::ADP é refosforilado para formar um novo ATP",
-    "Qual a função da fosfocreatina?::Reconstituir o ATP, transportando uma ligação fosfato de alta energia",
-    "Como a glicólise contribui para a contração muscular?::Quebra do glicogênio em ácido pirúvico e lático para reconstituir o ATP e a fosfocreatina",
-    "O que é o metabolismo oxidativo?::Combinação do oxigênio com produtos finais da glicólise para liberar ATP",
-    "O que é uma contração isométrica?::O músculo não encurta durante a contração, mas aumenta a tensão",
-    "O que é uma contração isotônica?::Os músculos se encurtam e a tensão no músculo permanece constante",
-    "Quais são as características das fibras musculares lentas?::Menores, alta capilaridade, muitas mitocôndrias, muita mioglobina, contração prolongada",
-    "Quais são as características das fibras musculares rápidas?::Maiores, retículo sarcoplasmático extenso, muitas enzimas glicolíticas, contração rápida e curta",
-    "O que é o potencial de ação?::Capacidade dos nervos de conduzir sinais elétricos rapidamente",
-    "O que é o período refratário?::Intervalo de tempo durante o qual não pode ser produzida uma segunda contração",
-    "O que é o período refratário relativo?::A célula pode responder a um estímulo forte suficiente durante a repolarização parcial",
-    "O que é o período refratário absoluto?::A célula está totalmente despolarizada e não pode responder a estímulos"
-];
-        function convertMarkdownToHTML(markdownText) {
-            const regex = /!\[\[(.*?)\]\]/g;
-            return markdownText.replace(regex, (match, src) => {
-                return `<img src='${src}'>`;
-            });
-        }
-
-        const flashcards = flashcardsMarkdown.map(entry => {
-            const [question, answer] = entry.split("::").map(convertMarkdownToHTML); // Convert markdown to HTML
-            return { question, answer, image: "", difficulty: "" };
-        });
-
-        let currentCard = 0;
-
-        function flipCard() {
-            const front = document.getElementById("card-front");
-            const back = document.getElementById("card-back");
-
-            front.style.display = front.style.display === "none" ? "flex" : "none";
-            back.style.display = back.style.display === "none" ? "flex" : "none";
-        }
-
-        function nextCard() {
-            currentCard = (currentCard + 1) % flashcards.length;
-            updateCard();
-            updateCardSelector(); // Update card selector styles
-        }
-
-        function previousCard() {
-            // Decrement the currentCard index, ensuring it stays within bounds
-            currentCard = (currentCard - 1 + flashcards.length) % flashcards.length;
-            updateCard();
-            updateCardSelector(); // Update card selector styles
-        }
-
-        function selectCard(event) {
-            if (event.target.tagName === "LI") {
-                const selectedCardIndex = parseInt(event.target.dataset.index, 10);
-
-                // Check if the same card is clicked again
-                if (selectedCardIndex === currentCard) {
-                    return; // Do nothing if the same card is clicked again
-                }
-
-                // Remove previously selected card styling
-                const cardSelector = document.getElementById("card-selector");
-                const previousSelectedCard = cardSelector.querySelector(".selected");
-                if (previousSelectedCard) {
-                    previousSelectedCard.classList.remove("selected");
-                }
-
-                // Apply styling based on difficulty to the selected card
-                const selectedCard = event.target;
-                const difficulty = flashcards[selectedCardIndex].difficulty;
-                selectedCard.classList.add("selected", difficulty);
-
-                // Update current card and display it
-                currentCard = selectedCardIndex;
-                updateCard();
-            }
-        }
-
-        function setDifficulty(difficulty) {
-            const cardSelector = document.getElementById("card-selector");
-            const selectedCard = cardSelector.querySelector(`li[data-index="${currentCard}"]`);
-
-            // Remove previous difficulty classes
-            selectedCard.classList.remove("easy", "medium", "hard");
-
-            // Set the new difficulty class
-            switch (difficulty) {
-                case "easy":
-                    selectedCard.classList.add("easy");
-                    break;
-                case "medium":
-                    selectedCard.classList.add("medium");
-                    break;
-                case "hard":
-                    selectedCard.classList.add("hard");
-                    break;
-                default:
-                    break;
-            }
-
-            // Update the difficulty in the flashcards array
-            flashcards[currentCard].difficulty = difficulty;
-        }
-
-        function updateCard() {
-            const currentFlashcard = flashcards[currentCard];
-            document.getElementById("question").innerHTML = currentFlashcard.question;
-            document.getElementById("answer").innerHTML = currentFlashcard.answer;
-
-            const flashcardContentDiv = document.getElementById("flashcard-content");
-            flashcardContentDiv.innerHTML = currentFlashcard.image;
-
-            const front = document.getElementById("card-front");
-            const back = document.getElementById("card-back");
-
-            front.style.display = "flex";
-            back.style.display = "none";
-        }
-
-        function populateCardSelector() {
-            const cardSelector = document.getElementById("card-selector");
-
-            flashcards.forEach((flashcard, index) => {
-                const listItem = document.createElement("li");
-                listItem.textContent = `Card ${index + 1}: ${flashcard.question}`;
-                listItem.dataset.index = index;
-                cardSelector.appendChild(listItem);
-            });
-        }
-
-        function updateCardSelector() {
-            const cardSelector = document.getElementById("card-selector");
-            const cardItems = cardSelector.querySelectorAll("li");
-
-            cardItems.forEach((item, index) => {
-                const distance = Math.abs(currentCard - index); // Calculate distance from current card
-                if (distance > 1) {
-                    item.classList.add("lighter"); // Add lighter class if not adjacent to current card
-                } else {
-                    item.classList.remove("lighter"); // Remove lighter class if adjacent to current card
-                }
-
-                // Add selected-current-card class if it's the current card
-                if (index === currentCard) {
-                    item.classList.add("selected-current-card");
-                } else {
-                    item.classList.remove("selected-current-card");
-                }
-            });
-        }
-
-        document.addEventListener("DOMContentLoaded", () => {
-            updateCard();
-            populateCardSelector();
-            updateCardSelector(); // Call to update card selector initially
-        });
-    </script>
 </body>
 </html>
-
