--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             .title-wrapper img {
                 margin-right: 5px; /* Adjust as needed */
             }
+            .collection-item {
+    white-space: nowrap; /* Prevent text from wrapping */
+    overflow: hidden; /* Hide overflowed text */
+    text-overflow: ellipsis; /* Show ellipsis (...) for truncated text */
+}
         }
     </style>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/goldenluke/javascript-flashcards/main/favicon.png" />
