--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
                 margin-right: 5px; /* Adjust as needed */
             }
 
-            .collection-item a.btn {
-                display: block;
-                width: 100%;
+            .collection-item a {
+                padding: 10px; /* Adjust padding for smaller buttons */
             }
         }
     </style>
