--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             line-height: 110%;
         }
 
-        /* Custom CSS for small screens (e.g., mobile devices) */
         @media only screen and (max-width: 600px) {
+            /* Custom CSS for small screens (e.g., mobile devices) */
             .brand-logo,
             .brand-logo.center {
                 margin-left: 0; /* Reset margin for small screens */
@@ -42,13 +42,19 @@
                 align-items: center;
             }
 
+
             .title-wrapper img {
                 margin-right: 5px; /* Adjust as needed */
             }
+.collection-item {
+    word-wrap: break-word; /* Break long words to prevent horizontal overflow */
+    white-space: normal; /* Allow text to wrap */
+}
 
-            .collection-item a {
-                padding: 10px; /* Adjust padding for smaller buttons */
-            }
+.collection-item a {
+    display: block; /* Make the entire anchor element clickable and fill its parent */
+    padding: 15px; /* Adjust padding as needed */
+}
         }
     </style>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/goldenluke/javascript-flashcards/main/favicon.png" />
