--- a/index.html
+++ b/index.html
@@ -42,19 +42,13 @@
                 align-items: center;
             }
 
+            .title-wrapper {
+                height: auto; /* Reset height for small screens */
+            }
 
             .title-wrapper img {
                 margin-right: 5px; /* Adjust as needed */
             }
-.collection-item {
-    word-wrap: break-word; /* Break long words to prevent horizontal overflow */
-    white-space: normal; /* Allow text to wrap */
-}
-
-.collection-item a {
-    display: block; /* Make the entire anchor element clickable and fill its parent */
-    padding: 15px; /* Adjust padding as needed */
-}
         }
     </style>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/goldenluke/javascript-flashcards/main/favicon.png" />
