--- a/index.html
+++ b/index.html
@@ -7,49 +7,62 @@
     <!-- Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <style>
-        /* Custom CSS for logo and title */
-        .brand-logo {
-            margin-left: 10px; /* Adjust as needed */
-        }
+/* Custom CSS for logo and title */
+.brand-logo {
+    margin-left: 10px; /* Adjust as needed */
+}
 
-        .brand-logo.center {
-            margin-left: 10px; /* Adjust as needed */
-        }
+.brand-logo.center {
+    margin-left: 10px; /* Adjust as needed */
+}
 
-        .title-wrapper {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100%; /* Ensure title-wrapper takes full height */
-        }
+.title-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%; /* Ensure title-wrapper takes full height */
+}
 
-        .title-wrapper img {
-            margin-right: 10px; /* Adjust as needed */
-        }
+.title-wrapper img {
+    margin-right: 10px; /* Adjust as needed */
+}
 
-        .title-text {
-            font-size: 1.64rem;
-            font-weight: 400;
-            line-height: 110%;
-        }
+.title-text {
+    font-size: 1.64rem;
+    font-weight: 400;
+    line-height: 110%;
+}
 
-        @media only screen and (max-width: 600px) {
-            /* Custom CSS for small screens (e.g., mobile devices) */
-            .brand-logo,
-            .brand-logo.center {
-                margin-left: 0; /* Reset margin for small screens */
-                display: flex;
-                align-items: center;
-            }
+/* Override Materialize CSS for button text */
+.btn {
+    white-space: normal;
+    overflow-wrap: break-word; /* Ensure long words break properly */
+}
 
-            .title-wrapper {
-                height: auto; /* Reset height for small screens */
-            }
+/* Increase font size for small screens */
+@media only screen and (max-width: 600px) {
+    .collection-item {
+        font-size: 1.2rem; /* Adjust as needed */
+    }
+}
 
-            .title-wrapper img {
-                margin-right: 5px; /* Adjust as needed */
-            }
-        }
+@media only screen and (max-width: 400px) {
+    .collection-item {
+        font-size: 1.1rem; /* Further adjust as needed */
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .collection-item {
+        font-size: 1rem; /* Further adjust as needed */
+    }
+}
+
+@media only screen and (max-width: 280px) {
+    .collection-item {
+        font-size: 0.9rem; /* Further adjust as needed */
+    }
+}
     </style>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/goldenluke/javascript-flashcards/main/favicon.png" />
 </head>
@@ -64,24 +77,24 @@
     </nav>
     <div class="container">
         <ul class="collection with-header">
-            <li class="collection-item"><a href="1.html" class="waves-effect waves-light btn">Contração do Músculo Esquelético</a></li>
-            <li class="collection-item"><a href="2.html" class="waves-effect waves-light btn">Transmissão Neuromuscular</a></li>
-            <li class="collection-item"><a href="3.html" class="waves-effect waves-light btn">Músculo Liso</a></li>
-            <li class="collection-item"><a href="5.html" class="waves-effect waves-light btn">Circulação</a></li>
-            <li class="collection-item"><a href="6.html" class="waves-effect waves-light btn">Distensibilidade Vascular e Pressões</a></li>
-            <li class="collection-item"><a href="7.html" class="waves-effect waves-light btn">Excitação do Músculo Esquelético</a></li>
-            <li class="collection-item"><a href="8.html" class="waves-effect waves-light btn">Microcirculação e Sistema Linfático</a></li>
-            <li class="collection-item"><a href="9.html" class="waves-effect waves-light btn">Controle Local e Humoral do Fluxo Sanguíneo dos Tecidos</a></li>
-            <li class="collection-item"><a href="10.html" class="waves-effect waves-light btn">Regulação Nervosa da Circulação</a></li>
-            <li class="collection-item"><a href="11.html" class="waves-effect waves-light btn">Rins e o Controle a Longo Prazo da Pressão Arterial</a></li>
-            <li class="collection-item"><a href="12.html" class="waves-effect waves-light btn">Débito Cardíaco e Retorno Venoso</a></li>
-            <li class="collection-item"><a href="13.html" class="waves-effect waves-light btn">Choques Circulatórios</a></li>
-            <li class="collection-item"><a href="15.html" class="waves-effect waves-light btn">Distensibilidade Vascular</a></li>
-            <li class="collection-item"><a href="17.html" class="waves-effect waves-light btn">Controle local e humoral do fluxo sanguíneo</a></li>
-            <li class="collection-item"><a href="18.html" class="waves-effect waves-light btn">Regulação nervosa da circulação e controle rápido da PA</a></li>
-            <li class="collection-item"><a href="19.html" class="waves-effect waves-light btn">Influência da renina no controle da PA</a></li>
-            <li class="collection-item"><a href="20.html" class="waves-effect waves-light btn">Débito cardíaco, Retorno venoso e suas regulações</a></li>
-            <li class="collection-item"><a href="24.html" class="waves-effect waves-light btn">Choque circulatório e seu tratamento</a></li>
+            <li class="collection-item"><a href="1.html" class="waves-effect waves-light">Contração do Músculo Esquelético</a></li>
+            <li class="collection-item"><a href="2.html" class="waves-effect waves-light">Transmissão Neuromuscular</a></li>
+            <li class="collection-item"><a href="3.html" class="waves-effect waves-light">Músculo Liso</a></li>
+            <li class="collection-item"><a href="5.html" class="waves-effect waves-light">Circulação</a></li>
+            <li class="collection-item"><a href="6.html" class="waves-effect waves-light">Distensibilidade Vascular e Pressões</a></li>
+            <li class="collection-item"><a href="7.html" class="waves-effect waves-light">Excitação do Músculo Esquelético</a></li>
+            <li class="collection-item"><a href="8.html" class="waves-effect waves-light">Microcirculação e Sistema Linfático</a></li>
+            <li class="collection-item"><a href="9.html" class="waves-effect waves-light">Controle Local e Humoral do Fluxo Sanguíneo dos Tecidos</a></li>
+            <li class="collection-item"><a href="10.html" class="waves-effect waves-light">Regulação Nervosa da Circulação</a></li>
+            <li class="collection-item"><a href="11.html" class="waves-effect waves-light">Rins e o Controle a Longo Prazo da Pressão Arterial</a></li>
+            <li class="collection-item"><a href="12.html" class="waves-effect waves-light">Débito Cardíaco e Retorno Venoso</a></li>
+            <li class="collection-item"><a href="13.html" class="waves-effect waves-light">Choques Circulatórios</a></li>
+            <li class="collection-item"><a href="15.html" class="waves-effect waves-light">Distensibilidade Vascular</a></li>
+            <li class="collection-item"><a href="17.html" class="waves-effect waves-light">Controle local e humoral do fluxo sanguíneo</a></li>
+            <li class="collection-item"><a href="18.html" class="waves-effect waves-light">Regulação nervosa da circulação e controle rápido da PA</a></li>
+            <li class="collection-item"><a href="19.html" class="waves-effect waves-light">Influência da renina no controle da PA</a></li>
+            <li class="collection-item"><a href="20.html" class="waves-effect waves-light">Débito cardíaco, Retorno venoso e suas regulações</a></li>
+            <li class="collection-item"><a href="24.html" class="waves-effect waves-light">Choque circulatório e seu tratamento</a></li>
         </ul>
     </div>
     <!-- Materialize JavaScript -->
